todo ready para darle caña a los modelos

--- a/src/Proyecto JOF min-max no out.ipynb
+++ b/src/Proyecto JOF min-max no out.ipynb
@@ -4443,7 +4443,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## Escalado min-max"
+                "## Escalado min-max sin outliers"
             ]
         },
         {
