--- a/src/Proyecto JOF min-max.ipynb
+++ b/src/Proyecto JOF min-max.ipynb
@@ -4420,7 +4420,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## Escalado min-max"
+                "## Escalado min-max con outliers"
             ]
         },
         {
