--- a/src/Proyecto JOF norm.ipynb
+++ b/src/Proyecto JOF norm.ipynb
@@ -4444,7 +4444,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## Normalización/Escalado min-max"
+                "## Normalización con outliers"
             ]
         },
         {
