--- a/src/Proyecto JOF norm no out.ipynb
+++ b/src/Proyecto JOF norm no out.ipynb
@@ -4419,7 +4419,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## Normalización"
+                "## Normalización sin outliers"
             ]
         },
         {
